[metadata]
name = nautiluslauncher
version = v1.2
description = Nautilus Job Launcher
long_description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    kubernetes
    pyyaml